k8s/overlays/flask-hml/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  template:
    spec:
      serviceAccountName: flask-sa-hml
